--- a/webpages/CourseRegistrationForm/course_registration.html
+++ b/webpages/CourseRegistrationForm/course_registration.html
@@ -59,6 +59,7 @@
         </div>
 
         <button type="submit">Submit Registration</button>
+	<div id="resultMessage"></div>
     </form>
 </div>
 
